trunk/Archive2/79/350a352260da23/output
main.cpp:12:29: error: 'typename A<T>::B' names 'template<class T> template<class C> class A<T>::B', which is not a type
   typedef typename A<T>::B<T> Ttype;
                             ^
